fix: update UI spacing on modal

--- a/style.css
+++ b/style.css
@@ -103,6 +103,8 @@ a:active {
   border: 1px solid var(--neutral);
   padding: 0.25rem;
   border-radius: 4px;
+  width: 100%;
+  padding: 1rem;
 }
 
 /****************************/
@@ -187,6 +189,9 @@ button {
   padding: 20px;
   border: 1px solid #888;
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .modal-header {
   display: flex;
